# icd10-codes

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  extract_icd10.py  pyproject.toml  requirements.txt  test.csv
.claude/: settings.local.json
.claude/commands/: create_gitignore.md  review_plan.md
data/: README.md
data/codiesp/corpus/final_dataset_v2_to_publish/: README.txt
data/codiesp/corpus/final_dataset_v2_to_publish/dev/: devD.tsv
data/codiesp/corpus/final_dataset_v2_to_publish/train/: trainD.tsv  trainX.tsv
data/raw/: README.md  icd10_codes-simplified.csv  icd10cm-categories-April-1-2026.csv  icd10cm-chapters-April-1-2026.csv  icd10cm-sections-April-1-2026.csv
data/raw/xml/: icd10cm-drug-April-1-2026-XML.xml  icd10cm-eindex-April-1-2026-XML.xml  icd10cm-neoplasm-April-1-2026-XML.xml
data/test-datasets/COT-SYMP-ICD10-2024/: README.md
data/test-datasets/COT-SYMP-ICD10-2024/train/: state.json
data/test-datasets/codiesp/corpus/final_dataset_v2_to_publish/dev/: devX.tsv
data/test-datasets/codiesp/gold/final_dataset_v4_to_publish/: README.md
data/test-datasets/mdace/: README.md
data/test/COT-SYMP-ICD10-2024/train/: dataset_info.json
data/test/codiesp/: README.md
docs/tfidf/: tfidf-guide.md
plan/: 2026-02-25-tfidf-demo-scripts.md  2026-02-26-codiesp-diagnosis-pipeline.md
plan/completed-plans/: 2026-02-26-codiesp-save-load.md
plan/future-plans/: 2026-02-26-add-description-aliases.md  2026-02-26-multi-label-icd10-pipeline-v3.REVIEW.md  2026-02-26-multi-label-icd10-pipeline-v3.md  2026-02-26-multi-label-icd10-pipeline-v4.REVIEW.md  2026-02-26-multi-label-icd10-pipeline-v4.md  2026-02-26-tfidf-knowledge-base-search.md
plan/past-plans/: 2026-02-25-tfidf-demo-scripts.REVIEW.md  2026-02-26-codiesp-save-load.REVIEW.md  2026-02-26-tfidf-knowledge-base-search.REVIEW.md  2026-02-27-multi-label-icd10-pipeline-v5.md
plan/thoughts/: multi-label-icd10-retrieval-v2.md  multi-label-icd10-retrieval-v3.md  multi-label-icd10-retrieval.md
reports/: report.html
results/: pipeline_v5_20260227_111801.md  pipeline_v5_20260227_113504.md
src/: cli.py  codes.py  knowledge_base.py  pipeline_v5.py  retriever.py
src/scripts/: convert_cot_symp_to_json.py  enrich_codes.py  extract_icd10.py  parse_codiesp.py
src/tfidf-demo/: step07_hybrid_search.py  step09_persistence.py
tests/: test_cli.py  test_data.json  test_knowledge_base.py  test_parse_codiesp.py  test_retriever.py
tests/data/: test_v1.json
tfidf-demo/: dataset.json  step02_vectorizer_vs_transformer.py  step03_fit_transform.py  step04_inspect_output.py  step05_key_parameters.py  step06_cosine_search.py  step07_hybrid_search.py  step08_debug_explain.py
thoughts/: search-thoughts.md
(+2 files in other folders)
