[project]
name = "anthuria-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "polars>=1.38.1",
    "requests>=2.32.5",
    "ty>=0.0.18",
]

[tool.ty.environment]
python-version = "3.12"
root = ["src"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ty.analysis]
replace-imports-with-any = ["bs4", "bs4.**", "lxml", "lxml.**", "pandas", "pandas.**", "pdfplumber", "pdfplumber.**", "requests", "requests.**"]
