[project]
name = "anthuria-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=4.6.0",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "polars>=1.38.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.15.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "ty>=0.0.18",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"
root = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ty.analysis]
replace-imports-with-any = ["bs4", "bs4.**", "lxml", "lxml.**", "pandas", "pandas.**", "pdfplumber", "pdfplumber.**", "requests", "requests.**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    # pytest-xdist: run tests in parallel across 6 cores of the CPU
    "-n", "2",
    # pytest-html: generate a self-contained HTML report after each run
    "--html=reports/report.html",
    "--self-contained-html",
    # pytest-benchmark: disable benchmarks in regular runs;
    # re-enable ad hoc with: uv run pytest --benchmark-enable -n0
    "--benchmark-disable",
]

[dependency-groups]
dev = [
    "autotyping>=24.9.0",
    "monkeytype>=23.3.0",
    "pre-commit>=4.5.1",
    "pytest-benchmark>=5.2.3",
    "pytest-datadir>=1.8.0",
    "pytest-datafiles>=3.0.1",
    "pytest-html>=4.2.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
]
